Created Tests for OrderControllerTests & ProductServiceTests
Tests (Mock and Stub) that tests the ability to return product when it exists, and Calls repository when creating product.

Mock+stub combo in OrderServiceTests

--- a/Inlämningsuppgift 1.Tests/Inlämningsuppgift 1.Tests.csproj
+++ b/Inlämningsuppgift 1.Tests/Inlämningsuppgift 1.Tests.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Inlämningsuppgift 1\Inlämningsuppgift 1.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
